--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
 <body>
-  <header class="header">
+  <!-- <header class="header">
     <nav class="header__nav-page container ">
       <a class="header__logo" href="./index.html">Web<span class="header__logo-studio">Studio</span></a>
       <ul class="nav-wrap header__nav-list list">
@@ -55,42 +55,42 @@
         </li>
       </ul>
     </nav>
-  </header>
+  </header> -->
     <!--Main-->
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="button button-first" data-modal-open type="button">Замовити послугу</button>
         </div>
-      </section>
+      </section> -->
       <!--section feature-->
       <section class="section-feature">
         <div class="container">
           <h2 class="section-feature__title visually-hidden">особливості</h2>
           <ul class="section-feature__list list">
-            <li class="section-feature__item  icon-antenna">
-              <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <li class="feature-item section-feature__item  icon-antenna">
+              <h3 class="feature-item__title">Увага до деталей</h3>
               <p class="section-feature__subtitle">
                 Ідейні міркування, і навіть початок повсякденної роботи з
                 формування позиції.
               </p>
             </li>
             <li class="section-feature__item  icon-clock">
-              <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+              <h3 class="feature-item feature-item__title">Пунктуальність</h3>
               <p class="section-feature__subtitle">
                 Завдання організації, особливо рамки і місце навчання кадрів
                 тягне у себе
               </p>
             </li>
             <li class="section-feature__item  icon-diagram">
-              <h3 class="title">ПЛАНУВАННЯ</h3>
+              <h3 class="feature-item feature-item__title">Планування</h3>
               <p class="section-feature__subtitle">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
-            <li class="section-feature__item icon-astronaut">
-              <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <li class="feature-item section-feature__item icon-astronaut">
+              <h3 class="feature-item__title">Сучасні технології</h3>
               <p class="section-feature__subtitle">
                 Значимість цих проблем настільки очевидна, що реалізація
                 планових завдань.
@@ -99,7 +99,7 @@
           </ul>
         </div>
       </section>
-      <!--Section work-->
+      <!-- Section work -->
       <section class="work">
         <div class="container">
           <h2 class="work__title">Чим ми займаємося</h2>
@@ -132,9 +132,9 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> 
       <!--Section our team-->
-      <section class="team">
+       <section class="team">
         <div class="container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list list">
@@ -310,7 +310,7 @@
         </div>
       </section>
       <!-- customers -->
-      <section class="customers">
+      <!-- <section class="customers">
         <div class="containers">
           <h2 class="customers__title">Постійні клієнти</h2>
           <ul class="customers__list list">
@@ -358,10 +358,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
     </main>
     <!--footer-->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer">
         <div class="footer-nav">
           <a class="footer__logo" href="./index.html">Web<span class="footer__studio">Studio</span></a>
@@ -426,9 +426,9 @@
           </form>
         </div>
       </div>
-    </footer>
+    </footer> -->
   <!-- МОДАЛЬНЕ ВІКНО -->
-  <div class="modal-backdrop is-hidden" data-modal>
+  <!-- <div class="modal-backdrop is-hidden" data-modal>
     <div class="modal">
       <div class="close-sign" data-modal-close>
         <svg class="close-button" width="18" height="18">
@@ -477,8 +477,7 @@
           </button>
       </form>
     </div>
-  </div>
+  </div> --> 
   <script src="./js/modal.js"></script>
   </body>
-  
   </html>
