--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <nav class="header__nav-page container ">
         <a class="header__logo" href="./index.html">Web<span class="header__logo-studio">Studio</span></a>
         <ul class="nav-wrap header__nav-list list">
@@ -54,7 +54,7 @@
           </li>
         </ul>
       </nav>
-    </header>
+    </header> -->
     <!--section projects-->
     <main>
       <section class="portfolio">
@@ -279,7 +279,7 @@
       </section>
     </main>
     <!-- FOOTER -->
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer">
         <div class="footer-nav">
           <a class="footer__logo" href="./index.html">Web<span class="footer__studio">Studio</span></a>
@@ -344,6 +344,6 @@
       </form>
     </div>
     </div>
-    </footer>
+    </footer> -->
       </body>
       </html>
