--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,6 @@
       href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css"
     />
     <!-- <link rel="stylesheet" href="./css/style.css" /> -->
-
     <!-- ПРОЦЕСОР SAAS -->
     <link
       rel="stylesheet"
@@ -364,7 +363,7 @@
       </section>
     </main>
     <!-- FOOTER -->
-    <!-- <footer class="footer">
+     <footer class="footer">
       <div class="container footer">
         <div class="footer-nav">
           <a class="footer__logo" href="./index.html">Web<span class="footer__studio">Studio</span></a>
@@ -429,6 +428,6 @@
       </form>
     </div>
     </div>
-    </footer> -->
+    </footer> 
   </body>
 </html>
