--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="./css/main.css" />
   </head>
   <body>
-    <!-- <header class="header">
+     <header class="header">
     <nav class="header__nav-page container ">
       <a class="header__logo" href="./index.html">Web<span class="header__logo-studio">Studio</span></a>
       <ul class="nav-wrap header__nav-list list">
@@ -61,14 +61,14 @@
   </header> -->
     <!--Main-->
     <main>
-      <!-- <section class="hero">
+      -- <section class="hero">
         <div class="container">
           <h1 class="hero__title">Ефективні рішення для вашого бізнесу</h1>
           <button class="button button-first" data-modal-open type="button">Замовити послугу</button>
         </div>
-      </section> -->
+      </section> 
       <!--section feature-->
-      <!-- <section class="section-feature">
+      <section class="section-feature">
         <div class="container">
           <h2 class="section-feature__title visually-hidden">особливості</h2>
           <ul class="section-feature__list list">
@@ -101,7 +101,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
       <!-- Section work -->
       <section class="work">
         <div class="container">
@@ -361,7 +361,7 @@
         </div>
       </section>
       <!-- customers -->
-      <!-- <section class="customers">
+       <section class="customers">
         <div class="containers">
           <h2 class="customers__title">Постійні клієнти</h2>
           <ul class="customers__list list">
@@ -409,10 +409,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section> 
     </main>
     <!--footer-->
-    <!-- <footer class="footer">
+    <footer class="footer">
       <div class="container footer">
         <div class="footer-nav">
           <a class="footer__logo" href="./index.html">Web<span class="footer__studio">Studio</span></a>
@@ -477,9 +477,9 @@
           </form>
         </div>
       </div>
-    </footer> -->
+    </footer> 
     <!-- МОДАЛЬНЕ ВІКНО -->
-    <!-- <div class="modal-backdrop is-hidden" data-modal>
+    <div class="modal-backdrop is-hidden" data-modal>
     <div class="modal">
       <div class="close-sign" data-modal-close>
         <svg class="close-button" width="18" height="18">
@@ -522,8 +522,6 @@
                   <a href="#" class="checkbox-link"><span>Умови договору</span></a>
                 </label>
           </div>
-  
-  
           <button type="submit" class="form-button"> Відправити
           </button>
       </form>
